[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Comfortaa-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/customNode/customEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Lobby/lobby.gd" type="Script" id=4]
[ext_resource path="res://scripts/VBoxContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/IconAdd.png" type="Texture" id=6]
[ext_resource path="res://assets/graph/bottom_screen.svg" type="Texture" id=7]
[ext_resource path="res://assets/UI/IconGear.png" type="Texture" id=8]
[ext_resource path="res://assets/graph/cercles/CEI.png" type="Texture" id=9]
[ext_resource path="res://assets/style/add_player.tres" type="StyleBox" id=10]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 50.0
bg_color = Color( 0.25098, 0.286275, 0.407843, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.25098, 0.286275, 0.407843, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10
expand_margin_right = 5.0
shadow_size = 5
shadow_offset = Vector2( 0, 4 )
anti_aliasing_size = 2

[sub_resource type="DynamicFontData" id=3]
hinting = 0
font_path = "res://assets/Comfortaa-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 100
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 65
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 50.0
bg_color = Color( 0.137255, 0.152941, 0.231373, 1 )
draw_center = false
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10
expand_margin_right = 5.0
anti_aliasing_size = 2

[node name="lobby" type="Control"]
margin_left = -1.0
margin_top = 0.586182
margin_right = 1439.0
margin_bottom = 2959.59
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="TextureRect" parent="."]
modulate = Color( 1, 0.831373, 0.164706, 1 )
anchor_right = 1.0
anchor_bottom = 0.891
margin_left = 1.0
margin_top = 1769.0
margin_right = 6.0
margin_bottom = 0.531006
focus_previous = NodePath("../ScrollContainer")
size_flags_horizontal = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.864
margin_left = 1.0
margin_top = 187.0
margin_right = 1.0
margin_bottom = -1918.58
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Appfundum"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.202
anchor_right = 1.0
anchor_bottom = 0.662
margin_bottom = 0.817017
focus_next = NodePath("../TextureButton")
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
scroll_horizontal_enabled = false
scroll_deadzone = -11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1440.0
margin_bottom = 316.0
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="PlayerNameBox" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_left = 220.0
margin_right = 1220.0
margin_bottom = 316.0
grow_horizontal = 2
size_flags_horizontal = 5
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1
script = ExtResource( 5 )

[node name="LineEdit" parent="ScrollContainer/VBoxContainer/PlayerNameBox" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 1000.0
margin_bottom = 133.0
grow_horizontal = 0
grow_vertical = 2
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 4 )

[node name="LineEdit2" parent="ScrollContainer/VBoxContainer/PlayerNameBox" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 183.0
margin_right = 1000.0
margin_bottom = 316.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 0.865
margin_left = 152.0
margin_top = 1923.0
margin_right = -511.0
margin_bottom = 113.461
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
action_mode = 0
button_mask = 7
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.865
margin_left = 370.0
margin_top = 1950.0
margin_right = -350.0
margin_bottom = -430.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="Button" parent="aBox"]
margin_right = 720.0
margin_bottom = 179.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = SubResource( 5 )
text = "Un joueur de plus?"

[node name="start" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 0.891
margin_left = 271.0
margin_top = 2289.0
margin_right = -61.0
margin_bottom = -73.4724
focus_previous = NodePath("../ScrollContainer")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "On peut y aller ! â†’"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo CEI2" type="Sprite" parent="."]
position = Vector2( 1240.78, 2116.5 )
rotation = 0.337897
scale = Vector2( 0.19196, 0.19196 )
texture = ExtResource( 9 )

[node name="settings" type="Button" parent="."]
anchor_right = 1.0
margin_left = 1163.0
margin_top = 41.0
margin_right = 916.0
margin_bottom = 1197.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.24, 0.24 )
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="player_added" from="ScrollContainer/VBoxContainer/PlayerNameBox" to="." method="_on_player_added"]
[connection signal="pressed" from="TextureButton" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="aBox/TextEdit" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="start" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_start_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
